# medspacy

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Demo-Notebook.ipynb  LICENSE  Makefile  README.md  discharge_summary.txt  index.html  medspacy_profiler.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  quickumls_instructions.md  requirements_piptests.txt  requirements_tests.txt  setup.py  sitemap.xml  spacy_requirements.txt  test.py  tests_requirements.txt  windows_and_quickumls.md
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/: quickumls_branch.yml
docs/: index.md  singlepage.md
medspacy/: VERSION  __init__.py  _custom_components.py  _extensions.py  _quickumls.py  _version.py  components.py  context.py  custom_tokenizer.py  dep_context.py  dep_section_detection.py  ner.py  pipeline.py  postprocess.py  preprocess.py  sectionizer.py  sentence_splitter.py  sentence_splitting.py  util.py  visualization.py
notebooks/: 01-Introduction.ipynb  02-Tokenizing-and-Sentence-Splitting.ipynb  03-Information-Extraction.ipynb  04-Adding-Pipeline-Components.ipynb  05-Full-Pipeline.ipynb  06-Using-Pretrained-Models.ipynb  07-visualizers.ipynb  08-Preprocessing-Postprocessing.ipynb  1-Introduction.ipynb  10-Custom_Tokenizer.ipynb  11-QuickUMLS_Extraction.ipynb  11a-QuickUMLS_Extraction_Defaults.ipynb  11b-QuickUMLS_Extraction_Advanced.ipynb  12-IO.ipynb  13-Extensions.ipynb  14-Span-Groups.ipynb  2-Preprocessing_and_Sentence_Splitting.ipynb  2-Tokenizing-and-Sentence-Splitting.ipynb  3-Information-Extraction-Copy1.ipynb  3-Information-Extraction.ipynb  4-Adding-Pipeline-Components.ipynb  4-Full-Pipeline.ipynb  5-Full-Pipeline.ipynb  5-Using-Pretrained-Models.ipynb  6-Using-Pretrained-Models.ipynb  7-visualizers.ipynb  8-Preprocessing-Postprocessing.ipynb  Extensions.ipynb  IO.ipynb  Spacy-V3.ipynb  Untitled.ipynb  discharge_summary.txt  helpers.py
profilers/: fun_profiler.prof  fun_test.prof  medspacy_pipeline_profiler.py  medspacy_pipline_mtsample_profiler.py  medspacy_profiler.py  medspacy_quickUMLS_profiler.py  medspacy_visualization_profiler.py  mtsample_crawler.py  pipeline_test.py  profile_notebook.ipynb  profiling.py  profiling_decorator.py  wrapper_test.py
requirements/: requirements.txt  requirements_docs.txt  requirements_tests.txt
resources/: context_rules.json  rush_rules.tsv  section_patterns.json  section_patterns.jsonl  section_patterns_new.json
(+383 files in other folders)
