[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medspacy"
dynamic = ["version", "readme"]
authors = [{name = "medSpaCy"}]
description = "Library for clinical NLP with spaCy."
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies= [
    "spacy>=3.4.1,<3.6",
    "PyRuSH>=1.0.8",
    "pysbd==0.3.4",
    "jsonschema",
    "medspacy_quickumls==3.0"
]
[tool.hatch.build]
include = [
  "/resources"
]

[tool.hatch.version]
path = "medspacy/_version.py"

[tool.hatch.metadata]
readme = "README.md"

[project.urls]
Source = "https://github.com/medspacy/medspacy"

