[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medspacy"
dynamic = ["version", "readme"]
authors = [{name = "medSpaCy"}]
description = "Library for clinical NLP with spaCy."
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "spacy >= 3.4.1, < 3.6",
    "PyRuSH >= 1.0.8",
    "pysbd == 0.3.4",
    "jsonschema",
    "medspacy_quickumls == 3.0"
]

[project.urls]
Source = "https://github.com/medspacy/medspacy"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "medspacy/_version.py"

