[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medspacy"
dynamic = ["version","dependencies","readme"]
authors = [{name = "medSpaCy"}]
description = "Library for clinical NLP with spaCy."
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
version={file = "medspacy/VERSION"}
readme={file = ['README.md'], content-type = "text/markdown"}

[project.urls]
Source = "https://github.com/medspacy/medspacy"

[tool.setuptools]
include-package-data = true